--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -6,16 +6,16 @@
   left: 0;
   right: 0;
   background-color: 'rgba(0,0,0,0.3)';
-  padding: 50;
+  padding: 50px;
+  z-index: 2;
 };
 
 
  .modalStyle {
-  background-color: '#fff';
-  border: 5px;
-  max-width: 500;
-  height: 300;
-  margin: '0 auto';
-  padding: 30;
-  z-index: 3;
+    width: 80%;
+    text-align: center;
+    font-size: 50px;
+    color: black;
+    margin-bottom: 0;
+    font-family: 'Montserrat', sans-serif;
 };
